# crypto-marketcap-rank

./: .earthlyignore  .gitignore  .mise.toml  .releaserc.yml  API_INVESTIGATIONS_SUMMARY.md  CANONICAL_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  Earthfile  KAGGLE_INVESTIGATION.md  LESSONS_LEARNED.md  LICENSE  PROJECT_STATUS.md  README.md  catalog-info.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  daily-collection.yml  monitor-collection.yml  monitor-collection.yml.bak  monthly-archive.yml  publish-pypi.yml  release.yml  test-pushover.yml
.mise/tasks/: collect.toml  dev.toml  release.toml  sdk.toml
data/: README.md
docs/: ARCHITECTURE.md
docs/adr/: 2025-12-03-pushover-doppler-integration.md
docs/archive/: PROJECT_PLAN.md
docs/canonical/: COIN_IDS_COMPLETE.md  CURRENT_RANKINGS_SOLUTION.md  MAXIMUM_RANKING_DEPTH.md  RANK_LOOKUP_GUIDE.md
docs/integrations/: alpha-forge.md
docs/investigations/: COINGECKO_COLLECTION_STATUS.md  COINGECKO_COVERAGE_ANALYSIS.md  KAGGLE_VALIDATION_RESULTS.md  RESEARCH_SUMMARY.md
docs/setup/: pushover-notifications.md
docs/warnings/: COINGECKO_RANK_LIMITATION.md  CRYPTO2_QUALITY_ANALYSIS.md  CRYPTO2_TEST_SESSION_SUMMARY.md  EXPERIMENT_FILES_GUIDE.md  NO_API_KEY_EXPERIMENT.md
logs/: coingecko-collection-20251120_172724.out  coingecko-collection-20251120_173330.out  coingecko-collection-with-api-20251120_174756.out  coingecko-no-api-key-20251120_195147.out
research/coingecko-marketcap-probe/: API_DOCUMENTATION.md  EXECUTIVE_SUMMARY.txt  FINDINGS.md  INDEX.txt  QUICK_REFERENCE.txt  README.md  capture_sample.py  coin_comparison_table.md  test_coingecko.py  test_slower.py
research/historical-marketcap-all-coins/: 00_QUICK_START.md  00_START_HERE.md  00_START_HERE.txt  01_feasibility_analysis.py  01_fetch_all_coins_list.py  01_prioritization_strategy.py  01_storage_analysis.py  02_endpoint_analysis.py  02_fetch_all_market_caps.py  02_rotation_scheduler.py  02_storage_engine.py  03_improved_scheduler.py  03_ingestion_pipeline.py  03_optimized_free_tier_collector.py  03_risk_analysis.md  04_COMPREHENSIVE_STRATEGY_REPORT.md  04_comprehensive_benchmarks.py  04_production_collector.py  04_scheduler_implementation.py  05_mathematical_model.py  05_production_implementation.py  ANALYSIS_SUMMARY.txt  DELIVERABLES.txt  DELIVERY_SUMMARY.txt  EXECUTIVE_SUMMARY.txt  FILES_MANIFEST.txt  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.txt  INDEX.md  QUICK_START.md  README.md  START_HERE.txt  STORAGE_OPTIMIZATION_REPORT.md  STRATEGY_INDEX.md  TOOLKIT_SUMMARY.md  VERIFICATION.txt  advanced_query.py  analyze.py  coins_list.txt  export.py  (+3 more)
schemas/: crypto-rankings-v2.schema.json
scripts/: test_builders.py
src/: __init__.py  main.py
src/builders/: __init__.py  base_builder.py  build_csv.py  build_duckdb.py  build_parquet.py
src/collectors/: __init__.py  coingecko_collector.py
src/crypto_marketcap_rank/: __init__.py  cache.py  cli.py  connection.py  exceptions.py  github_api.py  historical.py  loader.py
src/schemas/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_checkpoint_manager.py  test_rate_limiter.py
tools/: COMPREHENSIVE_GITHUB_HUNT_REPORT.md  calculate_point_in_time_rankings.py  collect_coingecko.py  download_kaggle_dataset.sh  fetch_all_coin_ids.py  fetch_current_rankings.py  lookup_rank_by_id_date.py  merge_datasets.py  monitor_no_api_key_collection.sh  post_collection_workflow.sh  quick_analysis.py  setup_kaggle.sh  test_no_api_key_threshold.py  validate_all.sh
(+33 files in other folders)
